# rodent

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  debug_rodent.sh  run_rodent.sh
refs/src/: embree_path_tracer.cpp  optix_path_tracer.cpp
src/: CMakeLists.txt
src/core/: illumination.impala  random.impala  spectral.impala
src/driver/: camera.h  color.h  converter.cpp  driver.cpp  interface.cpp  obj.cpp  spectral.cpp  spectral.h  ui.cpp  ui.h
src/generator/: bvh.h  convert_mts.cpp  convert_mts.h  convert_obj.cpp  convert_obj.h  export_image.cpp  export_image.h  generator.cpp  impala.h  platform.h  spectral.cpp  spectral.h  target.h
src/impala/core/: common.impala  illumination.impala  random.impala  spectral.impala
src/impala/render/: camera.impala  driver.impala  geometry.impala  image.impala  light.impala  mapping_gpu.impala  material.impala  microfacet.impala  renderer.impala  scene.impala  tonemapper.impala
src/render/: camera.impala  driver.impala  image.impala  light.impala  mapping_cpu.impala  mapping_gpu.impala  material.impala  renderer.impala  scene.impala
src/runtime/: embree_bvh.h  image.h  image_exr.cpp  image_jpg.cpp  image_png.cpp  image_utils.cpp  mesh.cpp  mesh.h  mts_serialized.cpp  mts_serialized.h  obj.cpp  obj.h  ply.cpp  ply.h
src/traversal/: intersection.impala  mapping_cpu.impala
testing/: prism.mtl  shiny_cornell_box.mtl  spectral_box.mtl  torus_glass.mtl
tools/bench_embree/: CMakeLists.txt
tools/bench_interface/: CMakeLists.txt  bench_interface.cpp  bench_interface.impala
tools/bench_shading/: CMakeLists.txt  bench_shading.cpp  bench_shading.impala
tools/bench_traversal/: CMakeLists.txt  bench_traversal.impala
tools/bvh_extractor/: CMakeLists.txt  bvh_extractor.cpp  extract_bvh2.cpp  extract_bvh4_8.cpp
tools/ray_gen/: CMakeLists.txt  ray_gen.cpp
